@@ -22,24 +22,6 @@
  </portlet>
 
  <portlet
-   addview="vnccollab.theme.portlets.ZimbraMailPortlet"
-   title="Zimbra Mail portlet"
-   description="A portlet which can render Zimbra Mail boxes."
-   i18n:attributes="title;description">
-   <for interface="plone.app.portlets.interfaces.IColumn" />
-   <for interface="plone.app.portlets.interfaces.IDashboard" />
- </portlet>
-
- <portlet
-   addview="vnccollab.theme.portlets.ZimbraCalendarPortlet"
-   title="Zimbra Calendar Portlet"
-   description="A portlet which can render Zimbra Calendar."
-   i18n:attributes="title;description">
-   <for interface="plone.app.portlets.interfaces.IColumn" />
-   <for interface="plone.app.portlets.interfaces.IDashboard" />
- </portlet>
-
- <portlet
    addview="vnccollab.theme.portlets.UsersBoxPortlet"
    title="Users Box portlet"
    description="A portlet which lists users contributed to current container."
@@ -52,15 +34,6 @@
    addview="vnccollab.theme.portlets.OpenERPJSPortlet"
    title="OpenERP Javascript portlet"
    description="A generic portlet which can render any OpenERP widget."
-   i18n:attributes="title;description">
-   <for interface="plone.app.portlets.interfaces.IColumn" />
-   <for interface="plone.app.portlets.interfaces.IDashboard" />
- </portlet>
-
- <portlet
-   addview="vnccollab.theme.portlets.RedmineTicketsPortlet"
-   title="Redmine Tickets portlet"
-   description="Renders list of opened Redmine Tickets for authenticated user."
    i18n:attributes="title;description">
    <for interface="plone.app.portlets.interfaces.IColumn" />
    <for interface="plone.app.portlets.interfaces.IDashboard" />
